# Infinistic

./: Makefile  Makefile.am  Makefile.in  README  README.md  config.h.in  config.h.in~  configure  configure.ac  main.c  num.c  num.h  numstack.c  numstack.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
doc/: demo.ogv  stack_ds.fig  todo
lib/: numstack.h
src/: num.c
